# lepton

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/lepton/: __main__.py  email
src/lepton/cli/domu/: email-client.py  proton-bridge.py
src/lepton/lib/: config.py
src/lepton/lib/common/: config.py  constants.py  host.py
src/lepton/lib/mgmt/: config.py
tests/: conf_builder.py  conftest.py  helpers.py
tests/data/config/: typical.toml
tests/unit/lib/: test_config.py
tests/unit/lib/common/: test_config.py
tests/unit/lib/common/config/: test_app_profile.py  test_cmd.py  test_common.py  test_exec.py  test_get_qube.py  test_load.py  test_script_profile.py  test_templatevms.py
