[project]
name = "lepton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic==1.9.1",
    "tomlkit>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lepton"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
